manifests/ingress/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: prometheus-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prom.de-marauder.me
    secretName: prometheus-server-tls
  rules:
  - host: prom.de-marauder.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            # name: prometheus-server
            # name: monitoring-kube-prometheus-prometheus
            name: loki-stack-prometheus-server
            port: 
            # Should be the targetPort of the service
              # number: 9090 # use with kube-prometheus-stack
              number: 80 # use with loki-stack or when installing prometheus individually
